--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-*{
+* {
   box-sizing: border-box;
   text-decoration: none;
 }
@@ -8,19 +8,25 @@ ul {
   margin-bottom: 0;
   margin-left: 0;
 }
-h1,h2,h3,h4,h5,h6,p{
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
   margin-top: 0;
   margin-bottom: 0;
 }
-h1{
+h1 {
   font-weight: bold;
   font-size: 56px;
 }
-h2{
+h2 {
   font-weight: bold;
   font-size: 36px;
 }
-h3{
+h3 {
   font-weight: medium;
   font-size: 20px;
 }
@@ -39,16 +45,16 @@ body {
 /*header*/
 .header {
   border-bottom: 1px solid#e7e9fc;
+  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
-.header-top{
+.header-top {
   display: flex;
 }
 .container {
-  
-    width: 1158px;
-    margin: 0 auto;
-    padding: 0 15px;
-   
+  width: 1158px;
+  margin: 0 auto;
+  padding: 0 15px;
 }
 .nav {
   display: flex;
@@ -74,26 +80,39 @@ body {
 .logo-spantwo {
   color: #f4f4fd;
 }
-.studio {
+.nav-link {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #2e2f42;
   padding: 24px 0;
+  
 }
-.studio:hover {
-  color: #404bbf;
-}
+.studio:hover,
 .studio:focus {
   color: #404bbf;
+}
+.current-nav-link {
+  color: #404bbf;
+  position: relative;
+}
+
+.current-nav-link ::after {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 4px;
+  left: 0;
+  bottom: -1px;
+  border-radius: 2px;
 }
 .contacts {
   font-style: normal;
 }
 .contacts-ul {
   display: flex;
-  
+
   gap: 40px;
 }
 .contacts-a {
@@ -174,6 +193,12 @@ body {
   width: calc((100% - 72px) / 4);
   border-radius: 0px 0px 4px 4px;
 }
+.sectwo-container {
+  background-color: #8e8f99;
+}
+.sectwo-svg {
+  color: #ffffff;
+}
 
 .sectwo-title {
   font-weight: 500;
@@ -214,7 +239,6 @@ body {
   background-color: #ffffff;
   width: calc((100% - 72px) / 4);
   border-radius: 0px 0px 4px 4px;
- 
 }
 .team-list:last-child {
   margin-right: 0;
@@ -239,7 +263,7 @@ body {
   text-align: center;
 }
 /*Portfolio*/
-.section-four{
+.section-four {
   padding: 120px 0;
 }
 .portfolio {
@@ -251,7 +275,7 @@ body {
   color: #2e2f42;
   margin-bottom: 72px;
 }
-.row{
+.row {
   display: flex;
   flex-wrap: wrap;
   column-gap: 24px;
@@ -274,11 +298,10 @@ body {
   flex-basis: calc((100% - 72px) / 4);
   display: inline-block;
 }
-.row-box{
+.row-box {
   padding: 32px 16px;
   border: 1px solid #e7e9fc;
   border-top: none;
-  
 }
 .row-parag {
   font-size: 16px;
@@ -291,7 +314,7 @@ body {
   padding: 100px 0;
   background-color: #2e2f42;
 }
-.logo-two{
+.logo-two {
   font-family: 'Raleway', sans-serif;
   font-weight: 700;
   font-size: 18px;
