--- a/css/styles.css
+++ b/css/styles.css
@@ -81,13 +81,16 @@ body {
   color: #f4f4fd;
 }
 .nav-link {
+  display: block;
+  position: relative;
+  text-decoration: none;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #2e2f42;
   padding: 24px 0;
-  
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .studio:hover,
 .studio:focus {
@@ -98,17 +101,19 @@ body {
   position: relative;
 }
 
-.current-nav-link ::after {
-  content: '';
-  position: absolute;
+.current-nav-link::after {
+content: "";
   width: 100%;
-  height: 4px;
+  position: absolute;
   left: 0;
   bottom: -1px;
+  height: 4px;
+  background-color: #404bbf;
   border-radius: 2px;
 }
 .contacts {
   font-style: normal;
+  
 }
 .contacts-ul {
   display: flex;
@@ -120,10 +125,10 @@ body {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #434455;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1)
+
 }
-.contacts-a:hover {
-  color: #404bbf;
-}
+.contacts-a:hover ,
 .contacts-a:focus {
   color: #404bbf;
 }
