--- a/css/styles.css
+++ b/css/styles.css
@@ -52,9 +52,17 @@ body {
   display: flex;
 }
 .container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 112px;
   width: 1158px;
   margin: 0 auto;
   padding: 0 15px;
+  background-color: #f4f4fd;
+  border-radius: 4px;
+  border: 1px solid #8e8f99;
+  margin-bottom: 8px;
 }
 .nav {
   display: flex;
@@ -137,6 +145,12 @@ content: "";
   background-color: #2e2f42;
   color: white;
   padding: 188px 0;
+  background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/people-office.jpg);
+  max-width: 1440px;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .title-one {
   font-size: 56px;
