--- a/css/styles.css
+++ b/css/styles.css
@@ -52,17 +52,11 @@ body {
   display: flex;
 }
 .container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 112px;
+  
   width: 1158px;
   margin: 0 auto;
   padding: 0 15px;
-  background-color: #f4f4fd;
-  border-radius: 4px;
-  border: 1px solid #8e8f99;
-  margin-bottom: 8px;
+  
 }
 .nav {
   display: flex;
@@ -176,6 +170,7 @@ content: "";
   cursor: pointer;
   display: block;
   margin: 0 auto;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1)
 }
 .button-text:hover {
   background-color: #404bbf;
@@ -213,7 +208,14 @@ content: "";
   border-radius: 0px 0px 4px 4px;
 }
 .sectwo-container {
-  background-color: #8e8f99;
+  display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 112px;
+    background-color: #f4f4fd;
+    border-radius: 4px;
+    border: 1px solid #8e8f99;
+    margin-bottom: 8px;
 }
 .sectwo-svg {
   color: #ffffff;
@@ -258,6 +260,8 @@ content: "";
   background-color: #ffffff;
   width: calc((100% - 72px) / 4);
   border-radius: 0px 0px 4px 4px;
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+
 }
 .team-list:last-child {
   margin-right: 0;
@@ -280,6 +284,31 @@ content: "";
   letter-spacing: 0.02em;
   color: #434455;
   text-align: center;
+}
+.social-ul{
+  display: flex;
+  justify-content: center;
+  gap: 24px;
+}
+.social-li{
+  width: 40px;
+  height: 40px; 
+}
+.social-a{
+  width: 100%;
+  height: 100%;
+  background-color: #4d5ae5;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.social-a:focus,
+.social-a:hover{
+  background-color: #404bbf;
+}
+.icon-linkedin{
+  background-color:#f4f4fd ;
 }
 /*Portfolio*/
 .section-four {
