--- a/css/styles.css
+++ b/css/styles.css
@@ -52,11 +52,9 @@ body {
   display: flex;
 }
 .container {
-  
   width: 1158px;
   margin: 0 auto;
   padding: 0 15px;
-  
 }
 .nav {
   display: flex;
@@ -104,7 +102,7 @@ body {
 }
 
 .current-nav-link::after {
-content: "";
+  content: '';
   width: 100%;
   position: absolute;
   left: 0;
@@ -115,22 +113,21 @@ content: "";
 }
 .contacts {
   font-style: normal;
-  
 }
 .contacts-ul {
   display: flex;
-
   gap: 40px;
+}
+.contacts-li {
 }
 .contacts-a {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #434455;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1)
-
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.contacts-a:hover ,
+.contacts-a:hover,
 .contacts-a:focus {
   color: #404bbf;
 }
@@ -139,7 +136,11 @@ content: "";
   background-color: #2e2f42;
   color: white;
   padding: 188px 0;
-  background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/people-office.jpg);
+  background-image: linear-gradient(
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
+    url(../images/people-office.jpg);
   max-width: 1440px;
   background-repeat: no-repeat;
   background-position: center;
@@ -170,7 +171,7 @@ content: "";
   cursor: pointer;
   display: block;
   margin: 0 auto;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1)
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .button-text:hover {
   background-color: #404bbf;
@@ -196,10 +197,7 @@ content: "";
 }
 .sectwo-ul {
   display: flex;
-  margin-right: 24px;
-  margin-top: 72px;
   gap: 24px;
-  padding-left: 0px;
 }
 .sectwo-li {
   background-color: #ffffff;
@@ -208,14 +206,15 @@ content: "";
   border-radius: 0px 0px 4px 4px;
 }
 .sectwo-container {
+  background-color: #f4f4fd;
+  width: 264px;
+  height: 112px;
+  border-radius: 4px;
+  border: 1px solid #8e8f99;
+  margin-bottom: 8px;
   display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 112px;
-    background-color: #f4f4fd;
-    border-radius: 4px;
-    border: 1px solid #8e8f99;
-    margin-bottom: 8px;
+  align-items: center;
+  justify-content: center; 
 }
 .sectwo-svg {
   color: #ffffff;
@@ -251,17 +250,15 @@ content: "";
 }
 .team-ul {
   display: flex;
-  flex-wrap: wrap;
-  margin-top: 72px;
-  gap: 24px;
-  padding-left: 0px;
+  gap: 24px; 
+  padding: 0;
 }
 .team-list {
   background-color: #ffffff;
   width: calc((100% - 72px) / 4);
   border-radius: 0px 0px 4px 4px;
-  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
-
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 .team-list:last-child {
   margin-right: 0;
@@ -285,30 +282,33 @@ content: "";
   color: #434455;
   text-align: center;
 }
-.social-ul{
+.social-ul {
   display: flex;
   justify-content: center;
   gap: 24px;
+  padding: 0 16px;
 }
-.social-li{
+.social-li {
   width: 40px;
-  height: 40px; 
+  height: 40px;
 }
-.social-a{
-  width: 100%;
-  height: 100%;
+.social-a {
+  width: 40px;
+  height: 40px;
   background-color: #4d5ae5;
   border-radius: 50%;
   display: flex;
   align-items: center;
   justify-content: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .social-a:focus,
-.social-a:hover{
+.social-a:hover,
+.social-a:active {
   background-color: #404bbf;
 }
-.icon-linkedin{
-  background-color:#f4f4fd ;
+.social-svg {
+  background-color: #f4f4fd;
 }
 /*Portfolio*/
 .section-four {
