--- a/css/styles.css
+++ b/css/styles.css
@@ -308,7 +308,8 @@ body {
   background-color: #404bbf;
 }
 .social-svg {
-  background-color: #f4f4fd;
+  fill: #f4f4fd;
+  width: 16px;
 }
 /*Portfolio*/
 .section-four {
@@ -338,13 +339,43 @@ body {
   color: #2e2f42;
   margin-bottom: 8px;
 }
-.rov-li {
+.row-li {
   text-decoration: none;
   list-style-type: none;
   flex: 1;
   background-color: #ffffff;
   flex-basis: calc((100% - 72px) / 4);
   display: inline-block;
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.row-li :hover{
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+.row-wrap{
+  position: relative;
+  overflow: hidden;
+}
+.row-text{
+  position: absolute;
+  top:0;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #f4f4fd;
+  background-color: #4d5ae5;
+  padding: 40px 32px;
+  display: flex;
+  align-items: center;
+  height: 100%;
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.row-li:hover .row-wrap{
+  transform: translateY(0);
+}
+.product-list{
+  padding: 32px 16px;
+  border: 1px solid #e7e9fc;
+  border-top: none;
 }
 .row-box {
   padding: 32px 16px;
