--- a/css/styles.css
+++ b/css/styles.css
@@ -348,7 +348,7 @@ body {
   display: inline-block;
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.row-li :hover{
+.row-li:hover{
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 .row-wrap{
@@ -369,15 +369,10 @@ body {
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.row-li:hover .row-wrap{
+.row-wrap:hover .row-text{
   transform: translateY(0);
 }
 .product-list{
-  padding: 32px 16px;
-  border: 1px solid #e7e9fc;
-  border-top: none;
-}
-.row-box {
   padding: 32px 16px;
   border: 1px solid #e7e9fc;
   border-top: none;
