--- a/css/styles.css
+++ b/css/styles.css
@@ -218,6 +218,7 @@ body {
 }
 .sectwo-svg {
   color: #ffffff;
+  width: 16px;
 }
 
 .sectwo-title {
@@ -310,6 +311,7 @@ body {
 .social-svg {
   fill: #f4f4fd;
   width: 16px;
+  height: 16px;
 }
 /*Portfolio*/
 .section-four {
