--- a/css/styles.css
+++ b/css/styles.css
@@ -389,6 +389,12 @@ body {
 .footer {
   padding: 100px 0;
   background-color: #2e2f42;
+  display: flex;
+  
+
+}
+.footer-wrap{
+  margin-right: 120px;
 }
 .logo-two {
   font-family: 'Raleway', sans-serif;
@@ -406,4 +412,39 @@ body {
   color: #f4f4fd;
   letter-spacing: 0.02em;
   max-width: 264px;
+}
+.footer-socials-wrap{
+  max-width: 208px;
+}
+.footer-socials-title{
+  font-family: 'Roboto', sans-serif;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #ffffff;
+  margin-bottom: 16px;
+}
+.footer-socials-list{
+  display: flex;
+  gap: 16px;
+}
+.footer-socials-link{
+  display: flex;
+  background-color: #4d5ae5;
+  border-radius: 50%;
+  align-items: center;
+  justify-content: center;
+  width: 40px;
+  height: 40px; 
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.footer-socials-icon{
+  fill:#f4f4fd;
+}
+.footer-socials-link:hover{
+  background-color: #31d0aa;
+}
+.footer-socials-link:active,
+.footer-socials-link:focus{
+  background-color: #31d0aa;
 }
