--- a/css/styles.css
+++ b/css/styles.css
@@ -395,6 +395,8 @@ body {
 }
 .footer-wrap{
   margin-right: 120px;
+  display: flex;
+  align-items: baseline;
 }
 .logo-two {
   font-family: 'Raleway', sans-serif;
