--- a/css/styles.css
+++ b/css/styles.css
@@ -389,14 +389,13 @@ body {
 .footer {
   padding: 100px 0;
   background-color: #2e2f42;
+}
+.footer .container {
   display: flex;
-  
-
+  justify-content: baseline;
 }
 .footer-wrap{
   margin-right: 120px;
-  display: flex;
-  align-items: baseline;
 }
 .logo-two {
   font-family: 'Raleway', sans-serif;
