--- a/css/styles.css
+++ b/css/styles.css
@@ -392,7 +392,7 @@ body {
 }
 .footer .container {
   display: flex;
-  justify-content: baseline;
+  align-items: baseline;
 }
 .footer-wrap{
   margin-right: 120px;
